<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_16"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_title_height"
        android:layout_marginTop="@dimen/margin_100"
        android:gravity="top"
        android:includeFontPadding="false"
        android:text="@string/login"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_28" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/email_title_height"
        android:layout_marginTop="@dimen/margin_28"
        android:includeFontPadding="false"
        android:text="@string/email"
        android:textAppearance="@style/title_text" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_8"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email_hint"
        android:includeFontPadding="false"
        android:inputType="textWebEmailAddress"
        android:paddingHorizontal="@dimen/margin_16"
        android:textAppearance="@style/edit_text"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="@color/white_alpha" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/password_title_height"
        android:layout_marginTop="@dimen/margin_28"
        android:includeFontPadding="false"
        android:text="@string/password"
        android:textAppearance="@style/title_text" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_8"
        android:autofillHints="password"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_hint"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/margin_16"
        android:textAppearance="@style/edit_text"
        android:textColor="?attr/colorOnPrimary"
        android:textColorHint="@color/white_alpha" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_24"
        android:background="@drawable/btn_bg"
        android:enabled="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textAppearance="@style/login_btn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/registration_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:includeFontPadding="false"
            android:text="@string/no_account"
            android:textAppearance="@style/action_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:includeFontPadding="false"
            android:text="@string/registration"
            android:textAppearance="@style/action_btn" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:includeFontPadding="false"
        android:text="@string/forgot_password"
        android:textAppearance="@style/action_btn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:layout_marginTop="@dimen/margin_32"
        android:background="@color/stroke" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/vk_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:background="@drawable/vk_bg"
            android:src="@drawable/vk_icon" />
        <ImageButton
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_weight="1"
            android:background="@drawable/ok_bg"
            android:src="@drawable/ok_icon" />
    </LinearLayout>


</LinearLayout>